20100410 mnemogogo-1.1.4
* Library support for limited filesystem search on Android
  (thanks to Jean-Baptiste Rouquier for suggestion).
* Support the 'learn ahead' feature
  (thanks to Jean-Baptiste Rouquier for suggestion).
* Add library support for extracting sounds from cards.

20100322 mnemogogo-1.1.3
* Add logging support to phone library.
* Silently ignore problems with htmlentitydefs.
* Fix crash on image not found
  (thanks to Kristófer Hannesson for detecting and reporting this problem).

20100223 mnemogogo-1.1.2
* Add support for Android demos.
* Fix error: `No module named htmlentitydefs'.

20100220 mnemogogo-1.1.1
* Fix a bug in the export of sounds.
  (Thanks to Tom Nazarenko for report.)

20100220 mnemogogo-1.1.0
* Bugfixes to Android client library.
* Remove encoding requests to support IBM Java VM on Palm.
* Add backupStats() functionality to mobile/hexcsv.
* Fix a bug in the logging of thinking time.
* Remove unnecessary newlines from stats logging into Mnemosyne.
* Add checks for data corruption in readCard.
* Fix a read corruption bug in readCard (particularly under Android).
* Support for different database files in the same card directory
  (thanks to Kristófer Hannesson for detecting and reporting this problem).
* Fix a porting bug in card grading whereby card easiness could drop below
  1.3. Any cards affected by this bug will be corrected when they are next
  reviewed using the updated library.

20100124 mnemogogo-1.0.0
* PRODUCTION RELEASE
* Add more meaningful exception messages for when problems occur
  in parsing CONFIG.
* Fix a minor problem in the tracking of future schedules.
* Provide a better error message for when the synchronization path
  is not set at all.
* Improve Mnemogogo error messages at startup and during export.
* No longer lock the preview window in remote mode.
* Add maximum image parameters to the config panel and simplify the
  list of interfaces: just one entry for Mnemojojo and a new entry for
  Mnemododo.